// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.protocol.v1;

import "com/digitalasset/canton/crypto/v0/crypto.proto";
import "scalapb/scalapb.proto";

// Messages depending on both participant_transaction.proto and participant_transfer.proto.

// Introduced in PV=DEV
message SignedProtocolMessage {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.UnstableProtoVersion";

  // Made repeated in v1
  repeated com.digitalasset.canton.crypto.v0.Signature signature = 1;
  // Factored one_of out into a separate message in v1.
  bytes typed_signed_protocol_message_content = 2;
}
